apps/production/medidocs-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medidocs-ui
  namespace: medidocs-ui
spec:
  selector:
    app: medidocs-ui
  ports:
    - name: http
      port: 80
      targetPort: 3000
