apps/production/medidocs-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medidocs-ui
  namespace: medidocs-ui
  annotations:
    cert-manager.io/cluster-issuer: luloai-issuer
    external-dns.alpha.kubernetes.io/target: homelab.luloai.com
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts: [medidocs.luloai.com]
      secretName: medidocs-ui-tls
  rules:
    - host: medidocs.luloai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: {name: medidocs-ui, port: {number: 80}}
